# Meal-Planner

./: .dockerignore  Dockerfile  README.MD  db.sqlite3  fly.toml  package-lock.json  pyproject.toml
main_app/: admin.py  forms.py  models.py  urls.py  views.py
main_app/migrations/: 0001_initial.py  0002_recipe.py  0003_rename_recipe_meal_ingredient.py  0004_meal_picture.py  0005_rename_name_ingredient_item_remove_meal_user_and_more.py  0006_meal_ingredients_alter_meal_picture_and_more.py  0007_alter_meal_picture.py  0007_remove_meal_picture_photo.py  0008_meal_user.py  0009_meal_photo_url_delete_photo.py  0010_like.py
main_app/templates/: base.html  home.html  landing.html  shopping_list.html
main_app/templates/main_app/: meal_form.html
main_app/templates/meals/: add_meal.html  detail.html  index.html
main_app/templates/registration/: signup.html
mealplanner/: settings.py  urls.py
